@@ -1,3 +1,5 @@
+Horizontal zoom is able to zoom in to 2.0 seconds
+Vertical zoom works as a scale factor, not as an addition term
 Made the y=0 grid line thicker and darker
 Made walls twice as thick
 Fixed: Vectors do not update when reversing the x-axis
